--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.36 2002/08/23 00:19:30 dustin Exp $
+	$Id: build.xml,v 1.37 2002/08/23 07:46:16 dustin Exp $
 
 	-->
 
@@ -54,6 +54,7 @@
 				<include name="spy/build.properties"/>
 				<include name="spy/db/CachePreparedStatement.java"/>
 				<include name="spy/db/CachedResultSet.java"/>
+				<include name="spy/db/sp/*.java"/>
 			</fileset>
 			<fileset dir="${TBUILDDIR}">
 				<include name="**/*.class"/>
@@ -189,7 +190,16 @@
 		</javac>
 	</target>
 
-	<target name="spgen" depends="all">
+	<target name="spgen">
+		<javac srcdir="${SRCDIR}"
+			destdir="${BUILDDIR}"
+			deprecation="${DEPRECATION}"
+			debug="${DEBUG}"
+			verbose="${VERBOSE}">
+
+			<classpath refid="myclasses"/>
+			<include name="net/spy/util/SPGen*.java"/>
+		</javac>
 		<taskdef name="spgen" classname="net.spy.util.SPGenTask">
 			<classpath refid="myclasses"/>
 		</taskdef>
@@ -248,7 +258,11 @@
     </java>
   </target>
 
-	<target name="dbstuff" depends="resultset,preparedstatement">
+	<target name="dbstuff" depends="resultset,preparedstatement,spfiles">
+	</target>
+
+	<target name="spfiles" depends="spgen">
+		<spgen srcdir="${SRCDIR}" destdir="${BUILDDIR}"/>
 	</target>
 
 	<!-- Build the result set -->
