--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.39 2002/08/27 23:14:36 dustin Exp $
+	$Id: build.xml,v 1.40 2002/08/27 23:16:56 dustin Exp $
 
 	-->
 
@@ -52,6 +52,7 @@
 			<fileset dir="${BUILDDIR}/net">
 				<include name="**/*.class"/>
 				<include name="spy/build.properties"/>
+				<include name="spy/db/TypeNames.java"/>
 				<include name="spy/db/CachePreparedStatement.java"/>
 				<include name="spy/db/CachedResultSet.java"/>
 				<include name="spy/db/sp/*.java"/>
