New Remote abstract class to deal with RPC exceptions b...
Author: dustin
Date: 2002/11/11 18:22:17

New Remote abstract class to deal with RPC exceptions better.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-706

--- a/java/java/servlet/rpc/build.xml
+++ b/java/java/servlet/rpc/build.xml
@@ -6,10 +6,12 @@
 		<fileset dir="${user.home}/lib/java">
 			<include name="jsdk.jar"/>
 			<include name="spy.jar"/>
+			<include name="xmlrpc.jar"/>
 		</fileset>
 		<pathelement path="${user.home}/prog/java/servlet/png"/>
 		<pathelement
 			path="/afs/@cell/home/dustin/public_html/webapp/WEB-INF/classes"/>
+		<pathelement path="${user.home}/prog/projects/geo"/>
 		<pathelement path="."/>
 	</path>
 
