Added the jar target.
Author: dustin
Date: 2002/11/11 18:24:52

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-707

--- a/java/java/servlet/rpc/build.xml
+++ b/java/java/servlet/rpc/build.xml
@@ -45,4 +45,12 @@
 		</copy>
 	</target>
 
+	<target name="jar" depends="all">
+		<jar jarfile="rpc.jar">
+			<fileset dir=".">
+				<include name="net/spy/**/*.class"/>
+			</fileset>
+		</jar>
+	</target>
+
 </project>
