Rewrote the temperature loader in eiffel.
Author: dustin
Date: 2002/11/23 08:31:35

Fixed up other stuff in modernizing.

imported from: dustin@spy.net--projects/snippets--eiffel--1.0--patch-97

--- a/eiffel/eiffel/pg/Makefile
+++ b/eiffel/eiffel/pg/Makefile
@@ -1,15 +1,19 @@
-E=smalleiffel
+E=se
 EC=$(E) compile
 
-RPATH=-rpath /usr/local/pgsql/lib
+RPATH=-R /usr/local/pgsql/lib
 
-EFLAGS=-g -I/usr/local/pgsql/include -debug_check
-LFLAGS=-L/usr/local/pgsql/lib $(RPATH) -lpq
+EFLAGS=-g -I/usr/local/pgsql/include
+# LFLAGS=-L/usr/local/pgsql/lib $(RPATH) -lpq
+LFLAGS=-L/usr/local/pgsql/lib -lpq
 
 FILES=Makefile pgtest.e pg.e pg_cstuff.c pg_replicate.e
 
 pgtest: pgtest.e pg.e pg_cstuff.c
 	$(EC) pgtest -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
+
+temploader: temploader.e pg.e pg_cstuff.c
+	$(EC) temploader.e -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
 
 dist: $(FILES)
 	mkdir pg
@@ -24,3 +28,5 @@ short:
 clean:
 	$(E) clean pgtest
 	rm -f pgtest
+	$(E) clean temploader
+	rm -f temploader
