Use multicast to pick up thermometers.
Author: dustin
Date: 2002/11/25 01:48:08

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-710

--- a/java/java/servlet/temperatures/build.xml
+++ b/java/java/servlet/temperatures/build.xml
@@ -35,8 +35,12 @@
 
 	<target name="install" description="Install the servlet" depends="all">
 		<copy
-			file="net/spy/temperature/Temperature.class"
-			tofile="/afs/.spy.net/misc/web/root/therm/WEB-INF/classes/net/spy/temperature/Temperature.class"/>
+			todir="/afs/.spy.net/misc/web/root/therm/WEB-INF/classes/">
+			<fileset dir="${BUILDDIR}">
+				<include name="net/**/*.class"/>
+				<include name="net/**/*.properties"/>
+			</fileset>
+		</copy>
 	</target>
 
 </project>
