--- a/java/java/servlet/debug/Makefile
+++ b/java/java/servlet/debug/Makefile
@@ -1,10 +1,10 @@
 # Makefile for RHash, remote object server stuff.
 
-JAVAHOME=/usr/pkg/java
+JAVAHOME=/usr/java
 JAR=$(JAVAHOME)/bin/jar
-JAVAC=$(JAVAHOME)/bin/javac
+JAVAC=$(JAVAHOME)/bin/javac -deprecation
 JAVA=$(JAVAHOME)/bin/java
-MYLIB=/home/dustin/lib/java
+MYLIB=$(HOME)/lib/java
 C1=$(MYLIB)/jsdk.jar:$(MYLIB)/spy.jar
 CLASSPATH=$(C1):.
 SERVLETRUNNER=/home/dustin/lib/java/JSDK2.0/bin/servletrunner
