New init servlet, do a proper cron instead of trying to...
Author: dustin
Date: 2002/12/08 08:39:39

New init servlet, do a proper cron instead of trying to redo that stuff
without a file.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-720

--- a/java/java/servlet/init/build.xml
+++ b/java/java/servlet/init/build.xml
@@ -30,7 +30,7 @@
 	</target>
 
 	<target name="install" depends="all">
-		<copy todir="/afs/.spy.net/misc/web/java/">
+		<copy todir="/afs/.spy.net/misc/web/root/init/WEB-INF/classes">
 			<fileset dir=".">
 				<include name="net/**/*.class"/>
 			</fileset>
