Throw a newline in there
Author: dustin
Date: 2002/12/12 01:05:14

imported from: dustin@spy.net--projects/snippets--ocaml--1.0--patch-19

--- a/ocaml/2wire/ocaml/misc/Makefile
+++ b/ocaml/2wire/ocaml/misc/Makefile
@@ -11,7 +11,8 @@ PROGS=parseSQLLog
 all: $(PROGS)
 
 parseSQLLog: parseSQLLog.ml
-	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib unix.cmxa stringutils.cmx parseSQLLog.ml
+	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
+		unix.cmxa stringutils.cmx parseSQLLog.ml
 
 clean:
 	rm -f *.a *.cma *.cmxa *.cmx *.mli *.cmi *.cmo *.o
