Some changes I had to make to get this working under my...
Author: dustin
Date: 2003/03/12 09:02:39

Some changes I had to make to get this working under my new palm dev
kit.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-404

--- a/c/c/palm/irtime/Makefile
+++ b/c/c/palm/irtime/Makefile
@@ -1,9 +1,9 @@
-BIN=/emul/linux/usr/local/bin
+BIN=/usr/local/bin
 PILRC=pilrc
-CC=$(BIN)/m68k-palmos-coff-gcc
+CC=$(BIN)/m68k-palmos-gcc
 CFLAGS=-O1 #-DERROR_CHECK_LEVEL=2
-LD=$(BIN)/m68k-palmos-coff-gcc
-OBJRES=$(BIN)/m68k-palmos-coff-obj-res
+LD=$(BIN)/m68k-palmos-gcc
+OBJRES=$(BIN)/m68k-palmos-obj-res
 
 OBJS=irtime.o
 
