Modified this to work.
Author: dustin
Date: 2003/06/18 07:17:18

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-417

--- a/c/c/comp/dwindows/Makefile
+++ b/c/c/comp/dwindows/Makefile
@@ -4,8 +4,8 @@ VERSION_MINOR=0
 VERSION_PATCH=0
 VERSION=$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH)
 DEFINES=-DVERSION=\"$(VERSION)\" -DMAX_X=80 -DMAX_Y=24
-CC=CC
-CFLAGS=-O2 +w $(DEFINES)
+CC=g++
+CFLAGS=-O2 $(DEFINES)
 LIBS=
 LDFLAGS=-s $(LIBS)
 DOOR_OBJS=door.o
