--- a/java/java/servlet/temperatures/net/spy/temperature/therms.properties
+++ b/java/java/servlet/temperatures/net/spy/temperature/therms.properties
@@ -8,4 +8,5 @@
 101D8A2A000000F7=newmachineroom
 10E8C214000000E4=garage
 1013A51E00000035=guestroom
-
+2183110000C034BB=dustinkeychain
+21508400004025AF=kitchen
