Added the ability for Noelani and Kim (the attorney) to...
Author: dustin
Date: 2003/09/08 01:33:51

Added the ability for Noelani and Kim (the attorney) to login.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-735

--- a/java/java/servlet/dsservlet/Makefile
+++ b/java/java/servlet/dsservlet/Makefile
@@ -1,8 +1,8 @@
-JAVAHOME=/usr/pkg/java
+JAVAHOME=/usr
 JAR=$(JAVAHOME)/bin/jar
-JAVAC=$(JAVAHOME)/bin/javac
+JAVAC=$(JAVAHOME)/bin/javac -deprecation
 JAVA=$(JAVAHOME)/bin/java
-MYLIB=/home/dustin/lib/java
+MYLIB=$(HOME)/lib/java
 C1=$(MYLIB)/jsdk.jar:$(MYLIB)/gifservlet.jar
 C2=$(MYLIB)/spy.jar:$(MYLIB)/cos.jar
 CLASSPATH=$(C1):$(C2):.
