Made a file line folder, have everything use that.
imported from: dustin@spy.net--projects/snippets--ocaml--1.0--patch-30

--- a/ocaml/2wire/lib/Makefile
+++ b/ocaml/2wire/lib/Makefile
@@ -6,7 +6,9 @@ OCAMLOPT=ocamlopt
 
 .PHONY: stringutils
 
-all: stringutils docs
+all: stringutils fileutils docs
+
+fileutils: fileutils.cmi fileutils.mli
 
 stringutils: stringutils.cmi stringutils.mli
 
