Updated with a better understanding of ocaml (see notes)
function -> fun (function is for patterns)

curried all the string functions and got rid of parameter definitions

ocaml 3.07pl2 needed a couple of build changes

imported from: dustin@spy.net--projects/snippets--ocaml--1.0--patch-33

--- a/ocaml/2wire/lib/Makefile
+++ b/ocaml/2wire/lib/Makefile
@@ -20,8 +20,7 @@ clean:
 	rm -f *.a *.cma *.cmxa *.cmx *.mli *.cmi *.cmo *.o
 
 .ml.mli:
-	$(OCAMLOPT) -o .buildtmp -i $< > $@
-	rm .buildtmp
+	$(OCAMLOPT) -i $< > $@
 
 .ml.cmi:
 	$(MKLIB) $<
