--- a/ocaml/misc/Makefile
+++ b/ocaml/misc/Makefile
@@ -22,7 +22,7 @@ parseTimingLog: parseTimingLog.ml
 
 mailCompress: mailCompress.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib -I /usr/local/lib/ocaml/site-lib \
-		unix.cmxa stringutils.cmx fileutils.cmx gz.cmxa $<
+		unix.cmxa stringutils.cmx fileutils.cmx gz.cmxa mailCompress.ml
 
 parseTimingLogbc: parseTimingLog.ml
 	$(OCAMLC) $(PROFILE) -w A -g -o $@ -I ../lib \
