Simplified auto-fetch by having it *always* autofetch. +misc
imported from: dustin@spy.net--projects/snippets--ocaml--1.0--patch-48

--- a/ocaml/2wire/lib/Makefile
+++ b/ocaml/2wire/lib/Makefile
@@ -27,7 +27,7 @@ docs:
 	ocamldoc -d doc -html *.ml
 
 clean:
-	rm -f *.a *.cma *.cmxa *.cmx *.mli *.cmi *.cmo *.o
+	rm -f testtop *.a *.cma *.cmxa *.cmx *.mli *.cmi *.cmo *.o
 
 .ml.mli:
 	$(OCAMLOPT) -i $< > $@
