--- a/ocaml/misc/Makefile
+++ b/ocaml/misc/Makefile
@@ -6,19 +6,11 @@ OCAMLC=ocamlc
 # Set this to -p for profiler support
 PROFILE=
 
-PROGS=parseSQLLog parseTimingLog mailCompress hlgrep
+PROGS=mailCompress hlgrep
 
 .SUFFIXES: .ml .mli .cmi .cmx
 
 all: $(PROGS)
-
-parseSQLLog: parseSQLLog.ml
-	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa stringutils.cmx fileutils.cmx parseSQLLog.ml
-
-parseTimingLog: parseTimingLog.ml
-	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa stringutils.cmx fileutils.cmx parseTimingLog.ml
 
 mailCompress: mailCompress.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib -I /usr/local/lib/ocaml/site-lib \
@@ -29,10 +21,6 @@ mailCompress: mailCompress.ml
 hlgrep: hlgrep.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		unix.cmxa str.cmxa fileutils.cmx hlgrep.ml
-
-parseTimingLogbc: parseTimingLog.ml
-	$(OCAMLC) $(PROFILE) -w A -g -o $@ -I ../lib \
-		unix.cma stringutils.cmo fileutils.cmo parseTimingLog.ml
 
 clean:
 	rm -f *.a *.cma *.cmxa *.cmx *.mli *.cmi *.cmo *.o
