Installation fix for thermometer stuff.
imported from: dustin@spy.net--projects/snippets--java--1.0--patch-739

--- a/java/servlet/temperatures/build.xml
+++ b/java/servlet/temperatures/build.xml
@@ -7,7 +7,7 @@
 			<include name="jsdk.jar"/>
 			<include name="spy.jar"/>
 		</fileset>
-		<pathelement path="${user.home}/prog/java/servlet/png"/>
+		<pathelement path="${user.home}/prog/eprojects/snippets/java/servlet/png"/>
 		<pathelement path="."/>
 	</path>
 
