--- a/ocaml/2wire/misc/Makefile
+++ b/ocaml/2wire/misc/Makefile
@@ -15,7 +15,7 @@ all: $(PROGS)
 mailCompress: mailCompress.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib -I /usr/local/lib/ocaml/site-lib \
 		unix.cmxa \
-		stringutils.cmx fileutils.cmx linkedlist.cmx lru.cmx gz.cmxa \
+		extstring.cmx fileutils.cmx linkedlist.cmx lru.cmx gz.cmxa \
 		mailCompress.ml
 
 hlgrep: hlgrep.ml
