--- a/ocaml/2wire/2wire/Makefile
+++ b/ocaml/2wire/2wire/Makefile
@@ -15,37 +15,35 @@ all: $(PROGS)
 
 parseSQLLog: parseSQLLog.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa extstring.cmx fileutils.cmx parseSQLLog.ml
+		unix.cmxa spy.cmxa parseSQLLog.ml
 
 parseTimingLog: parseTimingLog.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa extstring.cmx fileutils.cmx parseTimingLog.ml
+		unix.cmxa spy.cmxa parseTimingLog.ml
 
 parseTimingLogbc: parseTimingLog.ml
 	$(OCAMLC) $(PROFILE) -w A -g -o $@ -I ../lib \
-		unix.cma extstring.cmo fileutils.cmo parseTimingLog.ml
+		unix.cma spy.cma parseTimingLog.ml
 
 rrdIndex: rrdIndex.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa dbm.cmxa extstring.cmx fileutils.cmx rrdIndex.ml
+		unix.cmxa dbm.cmxa spy.cmxa rrdIndex.ml
 
 spreadsheetPivot: spreadsheetPivot.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa extstring.cmx fileutils.cmx spreadsheetPivot.ml
+		unix.cmxa spy.cmxa spreadsheetPivot.ml
 
 indexGWAuth: indexGWAuth.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa dbm.cmxa extstring.cmx fileutils.cmx indexGWAuth.ml
+		unix.cmxa dbm.cmxa spy.cmxa indexGWAuth.ml
 
 mfgCdb: mfgCdb.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa extoption.cmx extstring.cmx cdb.cmx netstring.cmx mfgCdb.ml
+		unix.cmxa spy.cmxa mfgCdb.ml
 
 extractAuthInfo: extractAuthInfo.ml mfgCdb.cmi
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
-		unix.cmxa \
-		extoption.cmx extstring.cmx cdb.cmx netstring.cmx base64.cmx \
-		mfgCdb.cmx extractAuthInfo.ml
+		unix.cmxa spy.cmxa mfgcdb.cmx extractAuthInfo.ml
 
 clean:
 	rm -f *.a *.cma *.cmxa *.cmx *.mli *.cmi *.cmo *.o
